Refactor game flow handling to be based on enums rather than aggregate of bools across batter/pitcher. Adds support for variable length wind-ups.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ authors = ["Owen Nelson <onelson@gmail.com>"]
 specs = "0.7.0"
 ggez = { git = "https://github.com/ggez/ggez.git" }
 omn_labs = { git = "https://github.com/onelson/OmnLabsRS.git" }
-
+rand = "*"
